--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^6.0.0",
     "axios": "^1.8.3",
     "formik": "^2.4.6",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
